unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/breadwinner_ns__BW_Currency__c.object-meta.xml
<CustomObject>
    <label>NetSuite Currency</label>
    <nameField>
        <label>Currency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>