unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/fields/breadwinner_ns__DisplaySymbol__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DisplaySymbol__c</fullName>
    <label>Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>