unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/fields/breadwinner_ns__FxRateUpdateTimezone__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__FxRateUpdateTimezone__c</fullName>
    <label>Update Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>