unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/fields/breadwinner_ns__InclInFxRateUpdates__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__InclInFxRateUpdates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Update</label>
    <type>Checkbox</type>
</CustomField>