unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/fields/breadwinner_ns__IsBaseCurrency__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsBaseCurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Base Currency</label>
    <type>Checkbox</type>
</CustomField>