unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/fields/breadwinner_ns__OverrideCurrencyFormat__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__OverrideCurrencyFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Currency Format</label>
    <type>Checkbox</type>
</CustomField>