unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/fields/breadwinner_ns__Symbol__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Symbol__c</fullName>
    <label>ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>