unpackaged/main/default/objects/breadwinner_ns__BW_Currency__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__Symbol__c</columns>
    <columns>breadwinner_ns__ExchangeRate__c</columns>
    <columns>breadwinner_ns__DisplaySymbol__c</columns>
    <columns>breadwinner_ns__FormatSample__c</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__IsBaseCurrency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>